# agent-bench

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.github/workflows/: deploy-docs.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  schema.py
backend/app/api/: access.py  agents.py  auth.py  automation.py  bench_agent.py  chat.py  dev.py  failures.py  invites.py  runs.py  scenarios.py  suites.py  workspaces.py
backend/app/models/: __init__.py  agent.py  agent_version.py  oauth_identity.py  run_evaluation.py  scenario.py  (+5 more)
backend/postman/: AgentBench-API.postman_collection.json  Bench-API.postman_collection.json
backend/scripts/: assign_existing_data_to_user.py  reset_and_seed.py  seed_scenarios.py  smoke_http_json_agent.py
backend/test_agents/: __init__.py  interview_agent.py
cli/bench/: client.py  display.py  main.py
docs/: README.md  agent-connector-rfc.md  api.md  connecting-agents.md  design-principles.md  developer-guide.md  docs.json  getting-started.md  http-json-agent-template.md  index.mdx  mint.json  quickstart.md  user-guide.md
docs/api-reference/: agents.mdx  authentication.mdx  overview.mdx  runs.mdx  scenarios.mdx  suites.mdx
docs/docs/: concepts.mdx  quickstart.mdx
frontend/: AGENTS.md  package-lock.json  package.json
mcp/: pyproject.toml
mcp/bench_mcp/: server.py
scripts/: take-screenshots.js
sdk/: pyproject.toml
sdk/bench_sdk/: __init__.py  agent.py  mapper.py  normalizer.py  registration.py
site/: docusaurus.config.ts
(+76 files in other folders)
