[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bench_mcp*"]

[project]
name = "bench-mcp"
version = "0.1.0"
description = "MCP server for Bench — run scenarios, suites, and inspect results from any MCP client"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.scripts]
bench-mcp = "bench_mcp.server:main"
