[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bench_sdk*"]

[project]
name = "bench-sdk"
version = "0.1.0"
description = "SDK for connecting agents to Bench"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=3.0"]
